[package]
name = "vid-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24" # remove later
opencv = { version = "0.94.1", features = ["clang-runtime"] }
indicatif = "0.17"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
lazy_static = "1.4"
base64 = "0.13"
rand = "0.8"
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
# ffmpeg-next = "6.0"
# tokio-tungstenite = "0.19" # For WebSocket

[dev-dependencies]
criterion = "0.4"
sysinfo = "0.29"
rand = "0.8"
